--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,17 @@ body {
   background: var(--mainWhite);
   color: var(--mainBlack);
 }
+
+/* navbar styling to be fixed when scrolled by Boye */
+
+.navbar {
+  background: var(--mainWhite);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+}
+/* end of navbar stylyng by boye */
 /* nav links */
 .navbar-toggler {
   outline: none !important;
