add style to avoid the navbar from covering the .show-cart element

--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,7 @@ body {
   overflow: hidden;
 }
 .show-cart {
+  margin-top: 4.92rem; /* this is to avoid the navbar from covering the .show-cart element */
   width: 18rem;
   padding: 2rem 1.5rem;
   transform: rotateY(-360deg);
